--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
-    - name: Checkout repository #проверка что наъодится внутри репозитория
+    - name: Checkout repository #проверка что находится внутри репозитория
       uses: actions/checkout@v3
  
     - name: Set up JDK 17
